# conan_base

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: random.h
src/: main.cpp  random.cpp
